--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Times New Roman", Times, serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -23,4 +24,14 @@ a {
     color: white;
     background: rgb(47, 47, 47);
   }
+}
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+::-webkit-scrollbar-track-piece {
+  background-color: #a4a4a4;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(94, 0, 0);
 }
