--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,9 @@
 html,
 body {
   padding: 0px !important;
-  margin:  0px !important;
-  font-family: "Times New Roman", Times, serif;
+  margin: 0px !important;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   overflow-x: hidden;
 }
 
