--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap");
 html,
 body {
   padding: 0px !important;
   margin: 0px !important;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
+  font-family: "Baloo 2", cursive;
   overflow-x: hidden;
   background-color: "#5F2222";
   background-repeat: no-repeat;
