--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   margin: 0px !important;
   /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
-  font-family: "Baloo 2", cursive;
+  font-family: "Baloo 2", cursive !important;
   overflow-x: hidden;
   /* background-color: "#5F2222";
   background-repeat: no-repeat;
@@ -20,6 +20,7 @@ body {
 
 * {
   box-sizing: border-box;
+  font-family: "Baloo 2", cursive !important;
   /* color: #fff; */
 }
 a {
