--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap");
+@import url("http://fonts.cdnfonts.com/css/cloister-black");
 html,
 body {
   padding: 0px !important;
